# gitinspectorgui-old

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.original.yaml  .pylintrc  README.md  RELEASE_PLAN.md  app-cli-bundle.spec  app-gui-bundle.spec  app-gui.spec  poetry.toml  pyproject.toml  uv.toml
scripts/: app-all.ps1  app-all.zsh  app-copy.ps1  app-create-cli.ps1  app-create-cli.zsh  app-create-gui.ps1  app-create.ps1  app-create.zsh  app-dmg.zsh  app-setup.iss  app-setup.ps1  bump-tag.zsh  bump-version.ps1  bump-version.zsh  bump.py  bump_tag.py  bump_version.py  create_all.py  create_mac_dmg.py  create_mac_pkg.py  create_win_setup.py  pylint-all.zsh
scripts/static/: win-setup.iss
src/gigui/: __main__.py  _logging.py  args_settings.py  args_settings_keys.py  blame.py  blame_manager.py  blame_reader.py  cli.py  cli_arguments.py  comment.py  common.py  constants.py  data.py  gi_runner.py  gi_runner_base.py  gigui_runner.py  gitinspector.py  keys.py  messages.py  queues_events.py  queues_setup.py  repo.py  repo_base.py  repo_blame.py  repo_data.py  repo_reader.py  repo_runner.py  repos.py  shared.py  shared_data.py  stats_reader.py  tiphelp.py  typedefs.py  utils.py  version.txt
src/gigui/gui/: commongui.py  dpg.py  dpg_base.py  dpg_window.py  dpg_window_support.py  psg.py  psg_base.py  psg_support.py  psg_window.py  psg_window_support.py  psgwindow.py
src/gigui/output/: blame_rows.py  excel.py  excel_sheet.py  flask_server.py  html.py  html_server.py  htmltable.py  messages.py  outbase.py  repo_blame_rows.py  repo_excel.py  repo_html.py  repo_html_server.py  repo_rows.py  server.py  (+8 more)
tools/: bump.py  create_app.py  create_asset.py  create_complete_release.py  create_mac_dmg.py  create_release.py  create_win_setup.py  extend_release.py  github.py
tools/static/: win-setup-arm.iss  win-setup.iss
(+13 files in other folders)
