[tool.poetry]
name = "gitinspectorgui"
version = "0.4.0rc2"
description = "A CLI and GUI tool for numerical and blame analysis of git repositories."
authors = ["Bert van Beek <d.a.v.beek@tue.nl>", "Jingjing Wang"]
license = "MIT"
readme = "README.md"
homepage = "https://gitinspectorgui.readthedocs.io/en/latest/index.html"
repository = "https://github.com/davbeek/gitinspectorgui"
keywords = [
    "git",
    "repository",
    "repositories",
    "analyzer",
    "analysis",
    "statistics",
    "blame",
    "cli",
    "gui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
]
include = []
packages = [{ include = "gigui", from = "src" }]

[tool.poetry.dependencies]
beautifulsoup4 = ">=4.12.3"
colorlog = ">=6.9"
gitpython = ">=3.1.43"
jinja2 = ">=3.1.4"
jsonschema = ">=4.23"
platformdirs = ">=4.3.6"
pysimplegui-4-foss = "^4.60.4.1"
python = ">=3.12,<3.13"
werkzeug = ">=3.1.3"
xlsxwriter = ">=3.2"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.dev.dependencies]
black = ">=24.10"
flake8 = ">=7.1.1"
mypy = ">=1.13"
pipdeptree = ">=2.24"
pre-commit = ">=4.0.1"
pyinstaller = ">=6.11.1"
pylint = ">=3.3.2"              # has isort as dependency
types-beautifulsoup4 = ">=4.12"
types-jsonschema = ">=4.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
